Add a sub-header with additional info about the roster stats columns

--- a/src/components/GenericTable.css
+++ b/src/components/GenericTable.css
@@ -1,3 +1,11 @@
 .infoBadge::after {
   content: "*"
 }
+
+td.centerAlignCol {
+  text-align: center
+}
+
+td.bottomAlignCol {
+  vertical-align: bottom
+}
